# simulation-urdf-fatcat-hex-grasp

./: LICENSE  README.md
learncommunication/: CMakeLists.txt  (+1 more)
reed_simulator/reed_gazebo/: CMakeLists.txt  package.xml
reed_simulator/reed_gazebo/config/: joint_names_le_arm.yaml
reed_simulator/reed_gazebo/controlfile/: gripper_controller.yaml  le_arm_controller.yaml
reed_simulator/reed_gazebo/controller/: le_arm_controller.yaml
reed_simulator/reed_gazebo/launch/: fall_cat_example.launch  le_arm_gazebo.launch  mav.launch  mav_hovering_example-tilt.launch  mav_hovering_example.launch  mav_hovering_example_Q.launch  mav_hovering_example_tf_sensor.launch  mav_hovering_example_without_arm.launch  spawn_mav.launch
reed_simulator/reed_gazebo/meshes/: body-hex.STL
reed_simulator/reed_gazebo/meshes/reed_quad_x/: body.STL  body1.STL  body2.stl  hex-tilt1.STL  prop.STL  rotor.STL  rotortilt.STL
reed_simulator/reed_gazebo/resource/: lee_controller_reed_quad_x.yaml  lee_controller_tilt_hex.yaml  quat_controller_tilt_hex.yaml  reed_quad_x.yaml  tilt_hex.yaml
reed_simulator/reed_gazebo/urdf/: change_tilt_hex.xacro  fall_cat.transmission.xacro  fall_cat.urdf.xacro  fall_cat_odometry.gazebo  iris_arm_base.xacro  le_arm.transmission.xacro  le_arm.urdf.xacro  mav_generic_odometry_sensor.xacro  mav_generic_odometry_sensor_tf_sensor.gazebo  mav_generic_odometry_sensor_without_arm.gazebo  multirotor_base_foot.xacro  reed_quad_x.xacro  reed_quad_x_base.xacro  tilt_hex.urdf  tilt_hex.xacro  tilt_hex_Z.xacro  tilt_hex_base.xacro  tilt_mav_generic_odometry_sensor.gazebo
(+49 files in other folders)
